cabal-version:        3.4
name:                 esc
version:              0.1.0.0
license:              BSD-3-Clause
author:               Michael Lee
maintainer:           milee@liverperson.com
category:             database
extra-source-files:   README.md

library
  exposed-modules:
  hs-source-dirs:     src
  ghc-options:        -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fno-warn-type-defaults -flate-specialise -fspecialise-aggressively
  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , BlockArguments
                    , ConstraintKinds
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveFunctor
                    , DeriveGeneric
                    , DerivingVia
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , PatternSynonyms
                    , PolyKinds
                    , OverloadedStrings
                    , OverloadedLabels
                    , PolyKinds
                    , RankNTypes
                    , StandaloneDeriving
                    , ScopedTypeVariables
                    , StrictData
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances
  build-depends:      base ^>= 4.16.1.0
                    , bytestring
                    , containers
                    , either
                    , exceptions
                    , extra
                    , foldl
                    , fused-effects
                    , generic-aeson
                    , iso8601-time
                    , optics
                    , optparse-applicative
                    , streamly
                    , text
                    , text-conversions
                    , time
                    , unordered-containers
                    , uuid
